<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:id="@+id/navigation_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24" />


    <item
        android:id="@+id/navigation_Add_Post"
        android:title="@string/Add_Post"
        android:icon="@drawable/ic_outline_add_box_24" />


    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_notifications_24" />

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_circle_24" />

</menu>
